# GeoFLOW

./: .gitignore  .travis.yml  CMakeLists.txt  DISCLAIMER  README.DISCLAIMER  README.md
analysis/src/: CMakeLists.txt  gcdg_pdf1d.cpp
docs/: .gitignore  CMakeLists.txt  Doxyfile.in
docs/doxy/: examples.md  hackathon_20201201.md  kitchen.md  mainpage.md  pde_int.md  tbox.md  user_configuration.md
docs/doxy/hackathon_20201201/: code_explanation.md  compile_and_run.md  hera_build_script.md  index.md  input_config.md  raplab_build_script.md
src/: CMakeLists.txt  configure.hpp.in
src/analysis/matlab/: keplot_geoflow2d.m  rgeoflow.m
src/apps/: CMakeLists.txt  README.cdg  geoflow.cpp  geoflow_cdg.cpp  geoflow_cdg.h  geoflow_stub.cpp  hack_input.jsn  hackathon_driver.cpp  test_driver.cpp
src/cdg/: CMakeLists.txt  README.TODO  README.cdg
src/cdg/blas/: cblas.h  cff_blas.F  cff_blas.h  cublas_init.cpp  cublas_init.h  dmxmp.F  fmxmp.F  gcblas.cpp  gcblas.hpp  gcblas.ipp  gindex.hpp  gmtk.cpp  gmtk.hpp  gmtk.ipp  gtmatrix.hpp  gtmatrix.ipp  gtstlvec.cpp  gtstlvec.hpp  gtvector.hpp  gtvector.ipp  qmxmp.F
src/cdg/cmake/: gcomp_options.cmake  gconfig_options.cmake  ginc_common.cmake  glocale.cmake  gmacros.cmake  gsrc_common.cmake  gtests_src.cmake  jsn_parse.py
src/cdg/comm/: gcomm.cpp  gcomm.hpp  gcommdata_t.h  ggfx.cpp  ggfx.hpp  ggfx.ipp  jan_ggfx.ipp  new_ggfx.hpp  new_ggfx.ipp
src/cdg/config/: ginitbdy_factory.hpp  ginitbdy_factory.ipp  ginitforce_comp.h  ginitforce_factory.hpp  ginitforce_factory.ipp  ginitstate_factory.hpp  ginitstate_factory.ipp  gspecbdy_factory.cpp  gspecbdy_factory.hpp  gspecterrain_factory.ipp  gupdatebdy_factory.hpp  gupdatebdy_factory.ipp
src/cdg/data/: geoflow.jsn
src/cdg/exec/: geoflow.cpp  geoflow.h
src/cdg/grid/: 0_ggrid_icos.cpp  gbc.cpp  gbc.hpp  gdd_base.cpp  gdd_base.hpp  gdd_base.ipp  ggrid.cpp  ggrid.hpp  ggrid_box.cpp  ggrid_box.hpp  ggrid_factory.cpp  ggrid_factory.hpp  ggrid_factory.ipp  ggrid_icos.cpp  ggrid_icos.hpp  ggrid_icos.ipp  gkeygen.hpp  gmorton_keygen.hpp  gmorton_keygen.ipp  gtpoint.hpp  gtpoint.ipp  polygon.h
src/cdg/include/: gcuda.h  gexec.h  gphysics.h  gtypes.h
src/cdg/init/: README.init  ginitbdy_factory.hpp  ginitforce_factory.hpp  ginitforce_factory.ipp  ginitstate_comp.h  ginitstate_factory.hpp  ginitstate_factory.ipp  gspecbdy_factory.cpp  gspecterrain_factory.hpp  gspecterrain_factory.ipp  gupdatebdy_factory.hpp
src/cdg/io/: gio.cpp  gio.h  gio.hpp  gio.ipp  gio_observer.hpp  gio_observer.ipp  gio_posix.cpp  gio_posix.h  gposixio_observer.hpp  gposixio_observer.ipp
src/cdg/pdes/: gab.hpp  gab.ipp  gbdf.hpp  gbdf.ipp  gburgers.cpp  gburgers.hpp  gburgers.ipp  gburgersdiag.hpp  gburgersdiag.ipp  gbutcherrk.hpp  gbutcherrk.ipp  gexrk_stepper.hpp  gexrk_stepper.ipp  gext.hpp  gext.ipp  gglobaldiag_basic.hpp  gglobaldiag_basic.ipp  gmconv.hpp  gmconv.ipp  gmultilev_coeffs_base.hpp  gpoisson.hpp  gpoisson.ipp  gstateinfo.hpp
src/cdg/sem/: gadvect.cpp  gadvect.hpp  gadvect.ipp  gboyd_filter.hpp  gboyd_filter.ipp  gdiv.hpp  gdiv.ipp  gelem_base.cpp  gelem_base.hpp  ghelmholtz.cpp  ghelmholtz.hpp  glbasis.hpp  glbasis.ipp  glinop.hpp  gllbasis.hpp  gllbasis.ipp  gmass.cpp  gmass.hpp  gnbasis.hpp  gpdv.cpp  gpdv.hpp  gpdv.ipp  gregelem.cpp  gregelem.hpp  gshapefcn_base.hpp  gshapefcn_embed.cpp  gshapefcn_embed.hpp  gshapefcn_embed.ipp  gshapefcn_hostd.cpp  gshapefcn_hostd.hpp  gshapefcn_hostd.ipp  gshapefcn_linear.cpp  gshapefcn_linear.hpp  gshapefcn_linear.ipp  gstressen.hpp  gstressen.ipp  tmp.cpp
src/cdg/solvers/: gcg.hpp  (+1 more)
src/geoflow/: .gitignore  CMakeLists.txt  configure.hpp.in
src/ifv/: CMakeLists.txt  README.ifv  dyn_A.cpp  dyn_A.hpp  icos_grid.cpp  icos_grid.hpp  icos_soln.cpp  icos_soln.hpp  mathut.hpp  output_icos.cpp  output_icos.hpp  rk4.cpp  rk4.hpp  sw_test_init.cpp  sw_test_init.hpp
src/odeint/: equation_base.hpp  euler_stepper.hpp  integrator.hpp  integrator.ipp  integrator_factory.hpp  integrator_factory.ipp  null_observer.hpp  observer_base.hpp  observer_factory.hpp  observer_factory.ipp  stepper_base.hpp  stepper_factory.hpp  stepper_factory.ipp
src/pdeint/: equation_base.hpp  equation_factory.hpp  equation_factory.ipp  filter_base.hpp  filter_factory.hpp  filter_factory.ipp  integrator.hpp  integrator.ipp  integrator_factory.hpp  integrator_factory.ipp  io_base.hpp  io_factory.hpp  io_factory.ipp  lin_solver_base.hpp  lin_solver_base.ipp  mixer_base.hpp  mixer_factory.hpp  mixer_factory.ipp  null_filter.hpp  null_mixer.hpp  null_observer.hpp  null_stirrer.hpp  null_update_bdy.hpp  observer_base.hpp  observer_factory.hpp  observer_factory.ipp  stirrer_base.hpp  stirrer_factory.hpp  stirrer_factory.ipp  update_bdy_base.hpp
src/scripts/: README.txt
src/tbox/: CMakeLists.txt  assert.hpp  clock.cpp  clock.hpp  command_line.cpp  command_line.hpp  display_header.cpp  display_header.hpp  enumerate.hpp  error_handler.cpp  error_handler.hpp  global_manager.cpp  global_manager.hpp  indices.hpp  input_manager.cpp  input_manager.hpp  io_buffer.cpp  io_buffer.hpp  morton.hpp  mpixx.cpp  multi_array.hpp  pio.cpp  pio.hpp  property_tree.cpp  property_tree.hpp  property_tree.ipp  range.hpp  tracer.cpp  tracer.hpp  traits.hpp  zip.hpp
src/xstd/: CMakeLists.txt  array.hpp  assert.hpp  chrono.hpp  fstream.hpp  hash.hpp  instrument.hpp  iostream.hpp  memory.hpp  range.hpp  string.hpp  utility.hpp
test/cdg/: CMakeLists.txt  cold_bubble.jsn  gbubble.jsn  gburgers.jsn  geoflow.jsn  gsod.jsn  gtest_cg.cpp  gtest_ggfx.cpp  gtest_gmtk.cpp  gtest_gtmatrix.cpp  gtest_gtvector.cpp  gtest_helm.cpp  gtest_rk.cpp  gtools.h  hot_bubble.jsn  icos_input.jsn  init_heat.cpp  input.jsn  input_cg.jsn  makefile  run.csh  warm_bubble_giraldo.jsn
test/odeint/: CMakeLists.txt  equation_euler.cpp  factories.cpp  harmonic_oscillator.cpp  linadv_integrator.cpp  linear_advection.cpp
test/pdeint/: CMakeLists.txt  linadv_integrator.cpp  linear_advection.cpp
test/tbox/: CMakeLists.txt  enumerate.cpp  indices.cpp  input_manager.cpp  morton.cpp  mpixx.cpp  property_tree.cpp  range.cpp  tbox_main.cpp  zip.cpp
(+241 files in other folders)
